--- a/basics/src/funcs/Cargo.toml
+++ b/basics/src/funcs/Cargo.toml
@@ -1,8 +1,6 @@
 [package]
-name = "basics"
+name = "funcs"
 version = "0.1.0"
 edition = "2021"
 
-
 [dependencies]
-funcs = { path = "./src/funcs" }
